manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: dbs
spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            db: postgres
    template:
        metadata:
            labels:
                db: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:alpine
                  imagePullPolicy: IfNotPresent
                  ports:
                      - name: postgres
                        containerPort: 5432
                  volumeMounts:
                      - name: postgres-data
                        mountPath: /var/lib/postgresql/data
                        subPath: pgdata
                      - name: dshm
                        mountPath: /dev/shm
            volumes:
                - name: postgres-data
                  persistentVolumeClaim:
                      claimName: postgres-storage
                - name: dshm
                  emptyDir:
                      medium: Memory
                      sizeLimit: 0.5Gi

---
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: dbs
spec:
    selector:
        db: postgres
    ports:
        - protocol: TCP
          port: 5432
          targetPort: 5432
