manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: dbs
    labels:
        db: redis

spec:
    replicas: 1
    selector:
        matchLabels:
            db: redis

    template:
        metadata:
            name: redis
            labels:
                db: redis
        spec:
            containers:
                -   name: redis
                    image: redis:alpine
                    imagePullPolicy: IfNotPresent
                    volumeMounts:
                        -   name: redis-data
                            mountPath: /data
                    securityContext:
                        readOnlyRootFilesystem: true
            restartPolicy: Always
            volumes:
                - name: redis-data
                  persistentVolumeClaim:
                      claimName: redis-storage

---
apiVersion: v1
kind: Service
metadata:
    name: redis
    namespace: dbs
spec:
    selector:
        db: redis
    ports:
        - protocol: TCP
          port: 6379
          targetPort: 6379
