manifests/site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: site
    namespace: apps
    labels:
        app: site
spec:
    replicas: 1
    selector:
        matchLabels:
            app: site
    template:
        metadata:
            name: site
            labels:
                app: site
        spec:
            containers:
                -   name: site
                    image: ghcr.io/hassanabouelela/devopsdemo
                    imagePullPolicy: IfNotPresent
                    command: ["uvicorn", "--host", "0.0.0.0", "--port", "8000", "main:app"]
            restartPolicy: Always
            imagePullSecrets:
                - name: pull-token

---
apiVersion: v1
kind: Service
metadata:
    name: site
    namespace: apps

spec:
    selector:
        app: site
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: site
    namespace: apps
spec:
    rules:
        - host: devops.com
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: site
                          port:
                              number: 80
